// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot for boolean mapping helper, do not change lightly or risk changing live mappings! 1`] = `
Object {
  "type": "boolean",
}
`;

exports[`Snapshot for date mapping helper, do not change lightly or risk changing live mappings! 1`] = `
Object {
  "type": "date",
}
`;

exports[`Snapshot for dateNanos mapping helper, do not change lightly or risk changing live mappings! 1`] = `
Object {
  "type": "date_nanos",
}
`;

exports[`Snapshot for flattened mapping helper, do not change lightly or risk changing live mappings! 1`] = `
Object {
  "type": "flattened",
}
`;

exports[`Snapshot for integer mapping helper, do not change lightly or risk changing live mappings! 1`] = `
Object {
  "type": "integer",
}
`;

exports[`Snapshot for keyword mapping helper, do not change lightly or risk changing live mappings! 1`] = `
Object {
  "ignore_above": 1024,
  "type": "keyword",
}
`;

exports[`Snapshot for long mapping helper, do not change lightly or risk changing live mappings! 1`] = `
Object {
  "type": "long",
}
`;

exports[`Snapshot for short mapping helper, do not change lightly or risk changing live mappings! 1`] = `
Object {
  "type": "short",
}
`;

exports[`Snapshot for text mapping helper, do not change lightly or risk changing live mappings! 1`] = `
Object {
  "fields": Object {
    "keyword": Object {
      "ignore_above": 1024,
      "type": "keyword",
    },
  },
  "type": "text",
}
`;
